--- a/diccionarioPrueba/Base.lproj/Main.storyboard
+++ b/diccionarioPrueba/Base.lproj/Main.storyboard
@@ -312,7 +312,7 @@
             </objects>
             <point key="canvasLocation" x="310" y="-188"/>
         </scene>
-        <!--Responde Rapido-->
+        <!--Responde Rápido-->
         <scene sceneID="ciD-Z9-hXH">
             <objects>
                 <viewController id="38h-4q-ssO" sceneMemberID="viewController">
@@ -360,7 +360,7 @@ Como jugador tendrás tres oportunidades de fallar, al seleccionar una opción i
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wws-Es-UDu">
                                 <rect key="frame" x="54" y="71" width="70" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="&lt; Back"/>
+                                <state key="normal" title="&lt; Juegos"/>
                                 <connections>
                                     <segue destination="Qfb-95-3Xu" kind="unwind" unwindAction="unwindWithUnwindSegue:" id="9KZ-ho-7m1"/>
                                 </connections>
@@ -382,7 +382,7 @@ Como jugador tendrás tres oportunidades de fallar, al seleccionar una opción i
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZiB-Az-EAL"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Responde Rapido" id="QZc-Db-ggF"/>
+                    <navigationItem key="navigationItem" title="Responde Rápido" id="QZc-Db-ggF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nX4-zs-Rxa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Qfb-95-3Xu" userLabel="Exit" sceneMemberID="exit"/>
